<resources>
    <string name="app_name">FitnessApp</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_signup">Don/\'t have an account? Signup</string>
    <string name="signup">Don\'t have an account? Signup</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="People" />
    <string name="track" />
    <string name="plan" />
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email2">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="signup2">Signup</string>
    <string name="plan_fragment">PLAN FRAGMENT</string>
    <string name="profile_fragment">PROFILE FRAGMENT</string>
    <string name="track_fragement">TRACK FRAGEMENT</string>
    <string name="track_fragment">TRACK FRAGMENT</string>
</resources>